# uav_geofence

./: .gitignore  EXPERIMENT_STEPS.md  README.md  VALIDATION.md  pyproject.toml  requirements.txt  run_experiments.py
configs/: ardupilot_log.yaml  demo_csv.yaml  main.yaml  px4_public_logs.yaml  px4_ulog.yaml  smoke.yaml  smoke_flightstack.yaml
docs/: status_report_2026-07.docx  status_report_2026-07.md
scripts/: aggregate_results.py  fetch_px4_logs.py  make_demo_logs.py  make_sitl_setup.py  run_seed_sweep.py
src/geofence_qnn/: __init__.py  cli.py  config.py  controller.py  data.py  dynamics.py  features.py  geometry.py  io_utils.py  model.py  quantization.py  reachability.py  simulation.py  smt.py  verification.py
src/geofence_qnn/flightstack/: __init__.py  geo.py  logs.py  mission.py  sitl.py  teachers.py
src/uav_geofence_qnn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py  test_flightstack.py  test_pipeline.py
